--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ftoggle",
   "module": "index.ts",
   "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "bun-types": "latest",
     "nx": "17.2.0"
