--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "lint": "nx run-many --target=lint",
+    "lint:fix": "nx run-many --target=lint:fix",
+    "format": "nx run-many --target=format",
+    "format:fix": "nx run-many --target=format:fix"
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "bun-types": "latest",
-    "nx": "17.2.0"
+    "eslint": "^8.55.0",
+    "nx": "17.2.0",
+    "prettier": "^3.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
