--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,7 +3,11 @@
   "module": "./src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot ./src/index.ts"
+    "dev": "bun --hot ./src/index.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier . --check",
+    "format:fix": "prettier . --write"
   },
   "devDependencies": {
     "bun-types": "latest"
