--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier . --check",
-    "format:fix": "prettier . --write"
+    "format:fix": "prettier . --write",
+    "db": "docker compose up -d"
   },
   "devDependencies": {
     "bun-types": "latest"
