--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,14 @@
 {
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "root": true,
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "plugins": ["@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": { "ecmaVersion": 2022, "sourceType": "module" },
   "rules": {
-    "no-unused-vars": "warn",
     "quotes": ["error", "single", { "avoidEscape": true }]
   }
 }
