--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,9 +21,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@lucia-auth/adapter-postgresql": "^2.0.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
     "elysia": "^0.7.30",
+    "lucia": "^2.7.4",
     "pg": "^8.11.3",
     "postgres": "^3.4.3"
   }
