--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier . --check",
     "format:fix": "prettier . --write",
+    "typecheck": "tsc",
     "db": "docker compose up -d",
     "migrations:gen": "drizzle-kit generate:pg",
     "migrations:run": "bun run ./src/db/migrate.ts",
@@ -15,7 +16,8 @@
   },
   "devDependencies": {
     "bun-types": "latest",
-    "drizzle-kit": "^0.20.6"
+    "drizzle-kit": "^0.20.6",
+    "tsc": "^2.0.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
