--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "nx run-many --target=lint",
     "lint:fix": "nx run-many --target=lint:fix",
     "format": "nx run-many --target=format",
-    "format:fix": "nx run-many --target=format:fix"
+    "format:fix": "nx run-many --target=format:fix",
+    "typecheck": "nx run-many --target=typecheck"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.2",
