--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup bun
-        uses: over-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
       - name: Install Packages
