--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,8 +16,7 @@
   },
   "devDependencies": {
     "bun-types": "latest",
-    "drizzle-kit": "^0.20.6",
-    "tsc": "^2.0.4"
+    "drizzle-kit": "^0.20.6"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
