--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:fix": "nx run-many --target=lint:fix",
     "format": "nx run-many --target=format",
     "format:fix": "nx run-many --target=format:fix",
-    "typecheck": "nx run-many --target=typecheck"
+    "typecheck": "nx run-many --target=typecheck",
+    "test": "nx run-many --target=test"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.2",
