--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@elysiajs/cors": "^0.7.2",
     "@ftoggle/db": "workspace:*",
     "@lucia-auth/adapter-postgresql": "^2.0.2",
     "dotenv": "^16.3.1",
