--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
+  "ignorePatterns": ["!.lintstagedrc.js", "package.json"],
   "plugins": ["@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": { "ecmaVersion": 2022, "sourceType": "module" },
