--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "module": "./src/index.ts",
   "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
     "dev": "bun --hot ./src/index.ts",
     "lint": "eslint .",
