--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,6 +26,8 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@elysiajs/eden": "^0.7.7",
+    "@ftoggle/api": "workspace:*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
