Override rules for *.json files to allow double quotes

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,5 +11,13 @@
   "parserOptions": { "ecmaVersion": 2022, "sourceType": "module" },
   "rules": {
     "quotes": ["error", "single", { "avoidEscape": true }]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.json"],
+      "rules": {
+        "quotes": ["error", "double"]
+      }
+    }
+  ]
 }
