Custom migration to add project roles and permissions

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,6 +15,7 @@
     "db": "docker compose up -d",
     "migrations:gen": "drizzle-kit generate:pg",
     "migrations:run": "bun run ./src/migrate.ts",
+    "migrations:custom": "drizzle-kit generate:pg --custom",
     "studio": "drizzle-kit studio"
   },
   "devDependencies": {
