--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^0.7.2",
+    "@ftoggle/common": "workspace:*",
     "@ftoggle/db": "workspace:*",
     "@lucia-auth/adapter-postgresql": "^2.0.2",
     "dotenv": "^16.3.1",
