Create 'Add API Token' button

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,6 +2,7 @@
   "name": "@ftoggle/common",
   "type": "module",
   "exports": {
+    "./enums/*": "./src/enums/*.ts",
     "./validations/*": "./src/validations/*.ts"
   },
   "peerDependencies": {
