--- a/packages/clients/web/tsconfig.json
+++ b/packages/clients/web/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
-    "target": "ES6",
-    "module": "ES6",
+    "target": "ESNext",
+    "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
