--- a/demo/api/package.json
+++ b/demo/api/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@ftoggle/clients/bun": "../../packages/clients/bun:*",
+    "@ftoggle/clients-bun": "file:../../packages/clients/bun",
     "elysia": "^0.8.14"
   },
   "devDependencies": {
