--- a/packages/clients/bun/package.json
+++ b/packages/clients/bun/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ftoggle/clients/bun",
+  "name": "@ftoggle/clients-bun",
   "module": "index.ts",
   "type": "module",
   "main": "./build/index.js",
