--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./types": "./src/typeboxes/index.ts"
+    "./types/*": "./src/typeboxes/*.ts"
   },
   "scripts": {
     "dev": "bun --hot ./src/index.ts",
