--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,12 +24,12 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^0.7.2",
+    "@elysiajs/swagger": "^0.8.5",
     "@ftoggle/common": "workspace:*",
     "@ftoggle/db": "workspace:*",
     "@lucia-auth/adapter-postgresql": "^3.0.0",
-    "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
-    "elysia": "^0.7.30",
+    "elysia": "^0.8.17",
     "lucia": "^3.0.1"
   }
 }
