--- a/packages/api/example.env
+++ b/packages/api/example.env
@@ -2,8 +2,15 @@
 
 API_PORT=8080
 ENVIRONMENT=dev
+
 DB_PASSWORD=dev
 DB_USER=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=ftoggle
+
+UI_BASE_URL=http://localhost:4200
+
+# Github OAuth
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
