--- a/demo/web/angular.json
+++ b/demo/web/angular.json
@@ -55,7 +55,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "buildTarget": "@ftoggle/ui:build:development",
-            "proxyConfig": "src/proxy.conf.json"
+            "proxyConfig": "src/proxy.conf.json",
+            "port": 4201
           },
           "configurations": {
             "production": {
