--- a/packages/clients/web/package.json
+++ b/packages/clients/web/package.json
@@ -6,15 +6,14 @@
   "exports": {
     ".": {
       "import": {
-        "types": "./build/index.d.ts",
+        "types": "./build/types/index.d.ts",
         "default": "./build/index.js"
       }
     }
   },
-  "types": "./build/index.d.ts",
   "scripts": {
     "build": "bun run ./build.ts && bun run build:declaration",
-    "build:declaration": "tsc ./index.ts --outFile ./build/index.d.ts --module es6 --declaration --emitDeclarationOnly --skipLibCheck",
+    "build:declaration": "tsc ./index.ts --outDir ./build/types --module es6 --declaration --emitDeclarationOnly --skipLibCheck",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier . --check",
