--- a/packages/ui/angular.json
+++ b/packages/ui/angular.json
@@ -72,6 +72,10 @@
             },
             "development": {
               "buildTarget": "@ftoggle/ui:build:development"
+            },
+            "docker-dev": {
+              "buildTarget": "@ftoggle/ui:build:development",
+              "proxyConfig": "src/proxy.docker-dev.conf.json"
             }
           },
           "defaultConfiguration": "development"
@@ -98,5 +102,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
