--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "dev": "ng serve",
+    "dev:docker": "ng serve --host 0.0.0.0 --configuration docker-dev",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --watch=false --browsers ChromeHeadless",
