--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -18,12 +18,12 @@
     "target": "ESNext",
     "module": "ESNext",
     "useDefineForClassFields": false,
-    "lib": ["ESNext", "dom"],
+    "lib": ["ESNext", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true,
-  },
+    "strictTemplates": true
+  }
 }
