Working compose with demo web <-> api networking

--- a/demo/web/angular.json
+++ b/demo/web/angular.json
@@ -69,6 +69,10 @@
             },
             "development": {
               "buildTarget": "demo-web:build:development"
+            },
+            "docker-dev": {
+              "buildTarget": "demo-web:build:development",
+              "proxyConfig": "src/proxy.conf-docker-dev.json"
             }
           },
           "defaultConfiguration": "development"
