--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     build:
       context: ../
       dockerfile: ./demo/api/dockerfile
+    environment:
+      - host=host.docker.internal
     volumes:
       - ../:/usr/src
     ports:
@@ -24,3 +26,8 @@ services:
     expose:
       - 8081
     command: bash -c "bun install && cd ./demo/api && bun run watch"
+
+networks:
+  ftoggle_network:
+    external:
+      name: ftoggle_network
