--- a/packages/api/example.env
+++ b/packages/api/example.env
@@ -7,7 +7,7 @@ DB_PASSWORD=dev
 DB_USER=postgres
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=ftoggle
+POSTGRES_DB=ftoggle
 
 UI_BASE_URL=http://localhost:4200
 
